# ray

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.claude/: plan-area-lights.md  plan-lights.md
docs/: architecture.md  feature-matrix.md  materials.md  scene-format.md
docs/adr/: ADR-001-modular-architecture.md  ADR-001-vulkan-rt-architecture.md  ADR-002-path-tracer-optimizations.md  ADR-003-modular-architecture.md  ADR-004-geometry-primitives.md  ADR-005-multi-target-build.md  ADR-006-csg-operations.md  ADR-006-shape-representation.md  ADR-008-parametric-primitives-library.md  ADR-009-engine-api-with-sdl.md  ADR-010-denoising-strategy.md  ADR-011-path-scattering-model.md  ADR-012-gaussian-gi.md  README.md
scenes/: basic.scene  caustics-box.scene  caustics-shapes-test.scene  caustics-showcase.scene  caustics.scene  cornell.scene  cubes-test.scene  demo.scene  embedded-torus.scene  glass-sphere.scene  lighting.scene  pointlight-test.scene  single-sphere-test.scene  teapot.scene
shaders/: caustics.comp  ray.comp  raytrace.comp  teapot.comp
shaders/includes/: bezier.glsl  csg.glsl  geometry.glsl  gi.glsl  lights.glsl  materials.glsl  noise.glsl  random.glsl  sampling.glsl  sdf.glsl  spatial_hash.glsl  transforms.glsl
shaders/includes/csg/: interval.glsl  operations.glsl  primitives.glsl
shaders/includes/csg/primitives/: box.glsl  cone.glsl  cylinder.glsl  disc.glsl  plane.glsl  polygon.glsl  sphere.glsl  torus.glsl
shaders/includes/materials/: material.glsl  sampling.glsl  types.glsl
shaders/includes/sdf/: csg.glsl  intersect.glsl  primitives.glsl  transforms.glsl
src/: main.cpp  renderer.cpp  renderer.h  scene.h
src/apps/ray/: main.cpp  ray_renderer.cpp  ray_renderer.h  teapot_patches.h
src/apps/raydemo/: test_scene.cpp
src/apps/scenecheck/: main.cpp
src/apps/teapot/: bezier_subdiv.h  bvh.h  main.cpp  teapot_patches.h  teapot_renderer.cpp  teapot_renderer.h
src/core/: camera.h  geometry.h  lights.h  materials.h  renderer.cpp  renderer.h  scene.h  types.h
src/demos/raydemo/: main.cpp  test_scene.cpp  test_scene.h
src/parametric/: types.h
src/parametric/bezier/: bvh.h  instance.h  patch.h  patch_group.h  subdivision.h
src/parametric/box/: box.h
src/parametric/cone/: cone.h
src/parametric/csg/: csg.h  csg_bvh.h
src/parametric/cylinder/: cylinder.h
src/parametric/gi/: gi_gaussian.cpp  gi_gaussian.h
src/parametric/lights/: lights.h
src/parametric/materials/: material.h
src/parametric/materials/presets/: diffuse.h  glass.h  metals.h
src/parametric/mesh/: mesh.h
src/parametric/scene/: scene_loader.h  sexp.h
src/parametric/sphere/: sphere.h
src/parametric/torus/: torus.h
